tests/typing/fail/undef-01.rs
use rust_sync::sync;

sync! {
    node oui() = (hello)
    where
        bye : int = 3;
}

fn main() {}
